--- a/luxmundi.html
+++ b/luxmundi.html
@@ -19,7 +19,7 @@
 
     <main>
         <section class="hero">
-            <img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/lmc.jpg" alt="Image of the LUX MUNDIS CUP event">
+            <img src="lmc.jpg" alt="Image of the LUX MUNDIS CUP event">
             <h2>Welcome to the LUX MUNDIS CUP!</h2>
             <p>Discover the excitement and passion of the LUX MUNDIS CUP 2024. Explore this website to learn more about the event, view stunning photos, and connect with fellow enthusiasts.</p>
             <a href="about.html" class="button">Learn More</a>
