--- a/home.html
+++ b/home.html
@@ -16,13 +16,13 @@
             <h2>My Journey</h2>
             <div class="photo-grid">
                 <div class="photo-item">
-                    <img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/gala.jpg" alt="Description of image 1">
+                    <img src="pretty 1.jpg" alt="Description of image 1">
                 </div>
                 <div class="photo-item">
-                    <img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/happy.jpg" alt="Description of image 2">
+                    <img src="pretty 2.jpg" alt="Description of image 2">
                 </div>
                 <div class="photo-item">
-                    <img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/party.jpg" alt="Description of image 3">
+                    <img src="pretty3.jpg" alt="Description of image 3">
                 </div>
                 </div>
         </section>
