--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <p>The LUX MUNDIS CUP is an annual event that brings student together. It's a truly inspiring event that promotes human potential and creativity.</p>
         <h3>My Experience</h3>
         <p>I was fortunate to participate in the LUX MUNDIS CUP as opening salvo participant. I had the opportunity to engage other students from different institute in the practice. It was an unforgettable experience that I will cherish forever.</p>
-        <img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/lmc.jpg" alt="About Image"><br><br><br><br><br><br>
+        <img src="lmc.jpg" alt="About Image"><br><br><br><br><br><br>
         <a href="luxmundi.html" class="button">Back</a>
     </section>
 </body>
