--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
 
 <h2 class="paragraph">Singing Contest</h2>
 
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/img1.jpg" alt="Image 1">
+<img src="sing1.jpg" alt="Image 1">
 
 <div class="caption">
 
@@ -28,7 +28,7 @@ She sang with a passion that lit up the stage.
 
 </div>
 
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/img5.jpg" alt="Image 1">
+<img src="sing.jpg" alt="Image 1">
 
 <div class="caption">
 
@@ -44,13 +44,13 @@ Two voices that blended together like honey and spice. But together, they were a
 
 <h2 class="paragraph">Mr. and Mrs. TCGC</h2>
 
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/img2.jpg" alt="Image 2">
+<img src="pageant1.jpg" alt="Image 2">
 
 <div class="caption"> Their talent was undeniable, each showcasing their unique abilities with a confidence that radiated from the stage. They were a symphony of talent and charisma, proving that true confidence comes from a passion for what you do.
 
 </div>
 
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/img4.jpg" alt="Image 2">
+<img src="pageant.jpg" alt="Image 2">
 
 <div class="caption">
 
@@ -66,11 +66,11 @@ Together, they were a captivating duo. They were the epitome of a perfect match.
 
 <h2 class="paragraph">Cheerleadance</h2>
 
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/img3.jpg" alt="Image 3">
+<img src="cheerdance2.jpg" alt="Image 3">
 
 <div class="caption">Their cheerdance team is a vibrant and energetic group of individuals who combine the athleticism of cheerleading with the artistry of dance.</div>
 
-<img src="file:///storage/emulated/0/Android/data/com.teejay.trebedit/files/TrebEdit user files/finalexam/photo/img7.jpg" alt="Image 3">
+<img src="cheerdance1.jpg" alt="Image 3">
 
 <div class="caption"> They captivate audiences with their energy, enthusiasm, and stage presence, creating a visually stunning and engaging performance.</div>
 
@@ -85,5 +85,3 @@ Together, they were a captivating duo. They were the epitome of a perfect match.
 </body>
 
 </html>
-
-class=""
